force-app/main/default/objects/Production_Log__b/Production_Log__b.object-meta.xml
<CustomObject>
    <label>Production Log</label>
    <pluralLabel>Production Logs</pluralLabel>
</CustomObject>