force-app/main/default/objects/Production_Log__b/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <label>Created By</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>