force-app/main/default/objects/Production_Log__b/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>Created Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>