force-app/main/default/objects/Production_Log__b/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <label>Customer ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Customer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>