force-app/main/default/objects/Production_Log__b/fields/LogID__c.field-meta.xml
<CustomField>
    <fullName>LogID__c</fullName>
    <label>Log ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>