force-app/main/default/objects/Production_Log__b/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>