force-app/main/default/objects/Production_Log__b/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>