force-app/main/default/objects/Production_Log__b/fields/VehicleID__c.field-meta.xml
<CustomField>
    <fullName>VehicleID__c</fullName>
    <label>Vehicle ID</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipName>Related_Car</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>